force-app/main/default/objects/PlatformEventMapping__mdt/PlatformEventMapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to control the mapping from Salesforce Fields towards the Platform Object fields. Works in combination with FieldSet on each involved Object.
Account
Contact
Address
Quote</description>
    <label>Platform Event Mapping</label>
    <pluralLabel>Platform Event Mappings</pluralLabel>
</CustomObject>