force-app/main/default/objects/PlatformEventMapping__mdt/fields/Salesforce_Platform_Event_JSONAttribute__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Platform_Event_JSONAttribute__c</fullName>
    <label>Salesforce Platform Event JSONAttribute</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>