force-app/main/default/objects/PlatformEventMapping__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <label>SObject API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>QuoteLineItem</fullName>
            </value>
            <value>
                <fullName>SalesAreaData</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>TerritoryUsers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>