force-app/main/default/objects/PlatformEventMapping__mdt/listViews/Account_Mapping.listView-meta.xml
<ListView>
    <fullName>Account_Mapping</fullName>
    <columns>MasterLabel</columns>
    <columns>Salesforce_Field_API_Name__c</columns>
    <columns>Salesforce_Platform_Event_JSONAttribute__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SObject_API_Name__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <label>Account Mapping</label>
    <language>en_US</language>
</ListView>