force-app/main/default/objects/PlatformEventMapping__mdt/listViews/All_Custom.listView-meta.xml
<ListView>
    <fullName>All_Custom</fullName>
    <columns>MasterLabel</columns>
    <columns>SObject_API_Name__c</columns>
    <columns>Salesforce_Field_API_Name__c</columns>
    <columns>Salesforce_Platform_Event_JSONAttribute__c</columns>
    <filterScope>Everything</filterScope>
    <label>All_Custom</label>
    <language>en_US</language>
</ListView>